move user points from user-service to payment-service
